# fit_vutbr-ims2018

./: .gitignore  CMakeLists.txt  Makefile
doc/: manual.tex  zdroje.bib
doc/images/: petri_net.psd  petri_net_prichody.psd
src/ims2018/: InputParser.cpp  InputParser.h  Sklad.cpp  Sklad.h  main.cpp
src/simlib/: Makefile.Linux-i586
